# DemoFFmpeg-os-v4-m2

app/: build.gradle
app/src/androidTest/java/com/dxtest/demoffmpeg02/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/dxtest/demoffmpeg02/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dxtest/demoffmpeg02/: ExampleUnitTest.java
mylibrary/: CMakeLists.txt  build.gradle
mylibrary/src/androidTest/java/com/dxtest/mylibrary/: ExampleInstrumentedTest.java
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: JniFFmpegApplication.cpp  JniFFmpegApplication.h  native-lib.cpp
mylibrary/src/main/java/com/dxtest/mylibrary/: JniFFmpegApplicaion.java  www.java
mylibrary/src/main/java/com/dxtest/mylibrary/base/: JNIBaseApplication.java
mylibrary/src/test/java/com/dxtest/mylibrary/: ExampleUnitTest.java
